--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "^1.0.3",
     "faker": "^3.1.0",
     "fs-extra": "^0.30.0",
     "imagemagick": "^0.1.3",
     "jquery": "^2.2.4",
     "lodash": "^4.17.4",
-    "meteor-node-stubs": "~0.2.0",
+    "meteor-node-stubs": "^0.2.11",
     "mmmagic": "^0.4.5",
     "mongo-xlsx": "^1.0.12",
-    "simpl-schema": "^0.2.2",
+    "simpl-schema": "^0.2.3",
     "toastr": "^2.1.2"
   },
   "devDependencies": {
